--- a/style.css
+++ b/style.css
@@ -26,17 +26,44 @@ body {
     z-index: 1;
     height: 450px;
     width: 80px;
-    background: rgba(247, 103, 103, 0.5);
     bottom: 0;
     right: 60px;
+
+    animation-name: layer;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
 }
+
+@keyframes layer{
+    0%{
+        bottom: 0;
+
+    }
+
+    25%{
+        bottom: -80px;
+
+    }
+
+    100%{
+        bottom: 0;
+
+    }
+}
+
+.layer-1 input[type=checkbox]{
+   
+}
+
+
 
 .layer-2 {
     position: absolute;
     z-index: 2;
     height: 450px;
     width: 80px;
-    background: white;
+    
     bottom: 0;
     left: 60px;
 }
@@ -58,7 +85,7 @@ body {
     z-index: 4;
     height: 350px;
     width: 80px;
-    background: white;
+    
     bottom: 0;
     left: 50px;
 }
@@ -78,7 +105,7 @@ body {
     z-index: 6;
     height: 250px;
     width: 80px;
-    background: white;
+    
     bottom: 0;
     right: 50px;
 }
@@ -126,7 +153,7 @@ body {
 }
 
 
-/* Diseño de panda */
+/* Diseño del panda */
 
 .left-ear-outer {
     background: black;
@@ -164,6 +191,27 @@ body {
     height: 5px;
     position: absolute;
     top: 20px;
+
+    animation-name: blink;
+    animation-duration: 2s;
+    animation-iteration-count:infinite;
+}
+
+@keyframes blink{
+    0% {
+        height: 5px;
+        
+    }
+
+    5%{
+        transform: translate(0px, 2.5px);
+        height: 2px;
+    }
+
+    10%{
+        transform: translate(0px, 0px);
+        height: 5px; 
+    }
 }
 
 .head_eye-left {
@@ -172,4 +220,16 @@ body {
 
 .head_eye-right {
     right: 27px;
+}
+
+.head_nose{
+    background: black;
+    border-radius: 50%;
+    width: 12px;
+    height: 6px;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
